--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jun 12 05:13:40 KST 2021
-sdk.dir=F\:\\android\\Sdk
+#Fri Aug 20 01:56:19 KST 2021
+sdk.dir=E\:\\Android\\Sdk
