--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.0.0'
 
     implementation 'androidx.multidex:multidex:2.0.0'
+
+    implementation 'com.android.volley:volley:1.1.1'//서버통신 관련 라이브러리
 }
