data button onclick

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".RegisterActivity">
+        </activity>
+        <activity
             android:name=".MainActivity">
-
         </activity>
 
         <!-- Foreground services in Q+ require type. -->
